# aoc-utils-mcp

./: GEMINI.md  Makefile  README.md  gemini-extension.json  pyproject.toml
mcp-server/src/: fastmcp.json  server.py
src/: fastmcp.json  server.py
tests/: a_client.py  test_server.py
